Fix extra whitespace on wikitables

--- a/css/general.less
+++ b/css/general.less
@@ -67,7 +67,12 @@ table.wikitable
 {
     display: block;
     border-width: 0px !important;
-    display: block;
+    background-color: transparent;
     max-width: 100%;
     overflow: auto;
+}
+
+table.wikitable tbody
+{
+    background-color: #eff0f1;
 }
